Return amounts with 2 decimals