@@ -22,13 +22,13 @@ import com.yahoo.vespa.hosted.controller.restapi.ErrorResponses;
 import com.yahoo.yolean.Exceptions;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.net.URLDecoder;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 import static com.yahoo.jdisc.http.HttpRequest.Method.GET;
 import static com.yahoo.restapi.ErrorResponse.methodNotAllowed;
@@ -46,7 +46,6 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 public class PricingApiHandler extends ThreadedHttpRequestHandler {
 
     private static final Logger log = Logger.getLogger(PricingApiHandler.class.getName());
-    private static final BigDecimal SCALED_ZERO = BigDecimal.ZERO.setScale(2);
 
     private final Controller controller;
 
@@ -104,7 +103,7 @@ public class PricingApiHandler extends ThreadedHttpRequestHandler {
                 case "resources" -> clusterResources.add(clusterResources(entry.getSecond()));
             }
         }
-        if (clusterResources.size() < 1) throw new IllegalArgumentException("No cluster resources found in query");
+        if (clusterResources.isEmpty()) throw new IllegalArgumentException("No cluster resources found in query");
 
         PricingInfo pricingInfo = new PricingInfo(enclave, supportLevel, committedSpend);
         return controller.serviceRegistry().pricingController().price(clusterResources, pricingInfo, plan);
@@ -143,7 +142,7 @@ public class PricingApiHandler extends ThreadedHttpRequestHandler {
                     if (index <= 0 ) throw new IllegalArgumentException("Error in query parameter, expected '=' between key and value: " + element);
                     return new Pair<>(element.substring(0, index), element.substring(index + 1));
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Optional<Plan> plan(String element) {
@@ -160,7 +159,7 @@ public class PricingApiHandler extends ThreadedHttpRequestHandler {
         addItem(array, "Volume discount", priceInfo.volumeDiscount());
         addItem(array, "Committed spend", priceInfo.committedAmountDiscount());
 
-        cursor.setString("totalAmount", priceInfo.totalAmount().toPlainString());
+        setBigDecimal(cursor, "totalAmount", priceInfo.totalAmount());
 
         return new SlimeJsonResponse(slime);
     }
@@ -169,8 +168,12 @@ public class PricingApiHandler extends ThreadedHttpRequestHandler {
         if (amount.compareTo(BigDecimal.ZERO) != 0) {
             var o = array.addObject();
             o.setString("description", name);
-            o.setString("amount", SCALED_ZERO.add(amount).toPlainString());
+            setBigDecimal(o, "amount", amount);
         }
+    }
+
+    private static void setBigDecimal(Cursor cursor, String name, BigDecimal value) {
+        cursor.setString(name, value.setScale(2, RoundingMode.HALF_UP).toPlainString());
     }
 
 }
